<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/city_name_text"
        android:textColor="@color/toolbar_color"
        app:layout_constraintStart_toStartOf="@id/etCityName"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/etCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/accent"
        android:ems="12"
        android:hint="@string/city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="16dp"
        android:text="@string/cancel"
        android:textColor="@color/dialog_buttons_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/button_ok"
        app:layout_constraintTop_toBottomOf="@id/etCityName" />

    <TextView
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/ok"
        android:textColor="@color/dialog_buttons_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCityName" />
</androidx.constraintlayout.widget.ConstraintLayout>